--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -12,6 +12,11 @@
           preparing_ship: "発送準備中"
           sent: "発送済み"
 
+        select_address:
+          my_address: "ご自身の住所"
+          registered_address: "登録済み住所から選択"
+          new_address: "新しいお届け先"
+
       order_details:
         making_status:
           not_production: "製作不可"
